<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notiflow</string>
    <string name="activity_main_title">Register your token</string>
    <string name="activity_main_hint">32 chars hex user token</string>

    <string name="activity_main_no_gps">No valid Google Play Services APK found.</string>
    <string name="activity_main_submit">Start Notiflow</string>

    <string name="pref_notify_type">When to notify</string>
    <string name="pref_notify_type_summary">%s</string>

    <string name="pref_notify_own_messages">Notify on my messages</string>
    <string name="pref_notify_own_messages_summary">Display a notification even for my own messages</string>

    <string name="pref_notify_vibration_frequency">Vibration frequency</string>
    <string name="pref_notify_vibration_frequency_summary">Minimum delay between vibrations</string>

    <string name="pref_get_token">Retrieve API token</string>
    <string name="pref_get_token_summary">Visit this link to get your Flowdock token</string>

    <string name="pref_token">Set token</string>
    <string name="pref_token_hint">32 chars hex user token</string>
    <string name="pref_token_summary">Set your Flowdock token</string>
    <string name="pref_token_toast">The app will not work until you set your Flowdock token.</string>
    <string name="pref_token_summary_ok">Update your Flowdock token</string>
    <string name="pref_token_description">
        <![CDATA[
        <p>Click on «retrieve your user token» to find your 32-character API token.<br />
        You\'ll then get push notification for any chat message in your flow.</p>
        <p><small>Warning: use your user token, not a specific flow token.</small></p>
        ]]>
    </string>

    <string name="pref_notify_silent_summary">Never vibrate</string>
    <string name="pref_notify_silent">Silent mode</string>

    <string name="pref_notify_when_active">Vibrate when active on the app</string>
    <string name="pref_notify_when_active_summary">Vibrate even when you\'re already active (on desktop or mobile)</string>

    <string name="pref_token_category">User token</string>
    <string name="pref_notification_category">Notifications Settings</string>
    <string name="pref_stats_total">Notification count</string>
    <string name="pref_stats_total_placeholder">%s notifications displayed</string>
    <string name="pref_stats_total_summary">Number of notifications displayed since installation</string>
    <string name="pref_notification_stats_category">Statistics</string>
    <string name="pref_notification_vibrator">Vibration preferences</string>
    <string name="messages_from">Messages from %s</string>
    <string name="messages_from_cooldown">Messages from %s (on cooldown)</string>

    <string-array name="flows_list_placeholder"></string-array>
</resources>